--- a/inventory/templates/inventory/product_list.html
+++ b/inventory/templates/inventory/product_list.html
@@ -5,10 +5,11 @@
     <!-- Sarlavha va tugmalar -->
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3">
         <h2>📦 Mahsulotlar ro'yxati</h2>
-        <div class="d-flex flex-column flex-md-row mt-2 mt-md-0">
-            <a href="{% url 'sold-product-list' %}" class="btn btn-dark me-md-2 mb-2 mb-md-0">📊 Sotilganlar statistikasi</a>
+        <div class="d-flex mt-2">
+            <a href="{% url 'sold-product-list' %}" class="btn btn-dark me-2">📊 Sotilganlar statistikasi</a>
             <a href="{% url 'product-add' %}" class="btn btn-primary">➕ Yangi mahsulot</a>
         </div>
+
     </div>
 
     <div class="table-responsive">
